hotfix: fix z-index

--- a/frontend/src/styles/components/Map.css
+++ b/frontend/src/styles/components/Map.css
@@ -2,7 +2,6 @@
   width: 26.1vw;
   height: 36.77vw;
   margin-bottom: 2.6vw;
-  z-index: -1;
 }
 
 .map-container {
