--- a/frontend/src/styles/components/MyPage.css
+++ b/frontend/src/styles/components/MyPage.css
@@ -166,7 +166,7 @@
           flex-direction: column;
 }
 
-.folder .right .posts-container .liked-posts {
+.folder .right .posts-container .liked-posts, .folder .right .posts-container .shared-posts {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
